norm, fixed small issue in bucket_sort, doesn't compile with fsanitize anymore

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -51,7 +51,7 @@ BNS_OBJ = $(BNS:_bonus.c=_bonus.o)
 
 OBJ = $(SRC:.c=.o)
 
-CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g
+CFLAGS = -Wall -Wextra -Werror
 ## 		-fsanitize=address -g
 CC = gcc
 
